--- a/part-1-ecosystem.ipynb
+++ b/part-1-ecosystem.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "cd8ce77f-6e6e-4e6a-ae13-edabf4661559",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Scikit-HEP ecosystem updates"
    ]
