--- a/part-2-awkward-updates.ipynb
+++ b/part-2-awkward-updates.ipynb
@@ -1,9 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4e6dc812-72b6-46c7-ac97-c92133a8e3ec",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Awkward Array updates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e5dfe59-395d-4a37-bc3c-be1f4798f432",
+   "metadata": {},
+   "source": [
+    "**Note:** although I'm presenting in Jupyter, this is a talk, rather than a tutorial. You don't have to follow along.\n",
+    "\n",
+    "<br><br><br><br><br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e4390e0-41ff-4c4c-9234-924ea5718206",
+   "id": "f7752bd4-f483-4d32-b853-ae83466dc392",
    "metadata": {},
    "outputs": [],
    "source": []
